[project]
name = "project7773"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "“tz2657”", email = "“z1310688141@gmail.com”" }
]
dependencies = [
    "pandas>=2.1.4",
    "yfinance>=0.2.33",
    "flask>=3.0.0",
    "requests>=2.31.0",
    "streamlit>=1.29.0",
    "scikit-learn>=1.3.2",
    "numpy>=1.26.2",
    "tensorflow>=2.15.0",
    "datetime>=5.3",
    "matplotlib>=3.8.2",
    "seaborn>=0.13.0",
    "comet_ml>=3.35.4",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.rye]
managed = true
dev-dependencies = []
